<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_username_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_profile_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/edit_profile_username_label"
            android:hint="@string/edit_profile_username_hint"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile_password_label"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/edit_profile_password_label"
            android:hint="@string/edit_profile_password_hint"
            android:inputType="textPassword"
            android:maxLength="20"
            android:maxLines="1"
            android:textSize="16sp" />

        <Button
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/edit_profile_button"
            android:background="@android:color/holo_green_light"/>

    </LinearLayout>
</ScrollView>
